--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -43,6 +43,7 @@ header {
     align-items: center;
     text-align: center;
     display: flex;
+    text-decoration: none;
 }
 
 .contenedorMenuHijo:hover {
@@ -75,6 +76,7 @@ header {
     align-items: center;
     text-align: center;
     display: flex;
+    text-decoration: none;
 }
 
 .contenedorMenuHijoContactame:hover {
@@ -423,6 +425,29 @@ header {
     position: relative;
     overflow: hidden;
     /* height: 300px; */
+}
+.carrusel-slidee {
+    display: none;
+}
+
+.carrusel-slidee.active {
+    display: block;
+}
+
+.carrusel-slidee img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.carrusel-slidee p {
+    background-color: #f5c518;
+    margin: 0;
+    padding: 8px;
+    font-weight: bold;
+    color: #222;
+    border-radius: 0 0 10px 10px;
 }
 
 .carrusel-slide {
