--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -107,12 +107,15 @@ header {
     display: flex;
     font-size: 50px;
     color: #ffffff;
+    margin-bottom: 35px;
 }
 
 .parrafoInformacion {
     font-size: 25px;
     text-align: justify;
     color: #ffffff;
+    line-height: 1.6;
+    margin-top: 0px;
 }
 
 .contenedorBotonesRedes {
@@ -164,8 +167,39 @@ header {
     width: 100%;
 }
 
+.AcercaDeMi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.TituloAcercaDe {
+    font-size: 46px;
+    margin-bottom: 0px;
+    margin-top: 100px;
+}
+
+.SeparadorAcercaDe {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    height: 5px;
+    width: 3rem;
+    background: #dab217;
+    border-radius: 5px;
+}
+
+
+.ParrafoAcercaDe {
+    font-size: 25px;
+    margin: 20px 200px;
+    text-align: center;
+    line-height: 1.6;
+}
+
 .tituloEmpresas {
     margin-top: 0px;
+    margin-bottom: 0px;
     font-size: 36px;
     height: 100px;
     background-color: rgb(36 36 36 / 96%);
@@ -180,15 +214,16 @@ header {
     display: flex;
     justify-content: space-evenly;
     padding: 0px 20px;
-    background-color: #fff;
+    width: 100%;
+    background-color: rgb(249, 249, 249);
 }
 
 .formacion h2 {
-    margin-top: 90px;
     font-size: 2rem;
     color: #333;
     display: flex;
     justify-content: center;
+    margin-bottom: 0px;
 }
 
 .escuelas {
@@ -208,7 +243,7 @@ header {
 }
 
 .logo-escuela img {
-    max-width: 200px;
+    max-width: 100px;
     height: auto;
     object-fit: contain;
     margin-bottom: 15px;
@@ -235,9 +270,9 @@ header {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    padding: 4rem 2rem;
+    padding: 5rem 4rem;
     /* background-color: #f9f9f9; */
-    background-image: url("../img/fondo-gris.png");
+    /* background-image: url("../img/fondo-gris.png"); */
 }
 
 .experiencia-col,
@@ -250,14 +285,14 @@ header {
 .especialidades-col h2 {
     font-size: 2rem;
     margin-bottom: 1.5rem;
-    border-bottom: 3px solid #3498db;
+    border-bottom: 3px solid #dab217;
     display: inline-block;
     padding-bottom: 0.5rem;
 }
 
 .experiencia {
-    background-color: #ffffff;
-    border-left: 4px solid #3498db;
+    background-color: #f9f9f9;
+    border-left: 4px solid #dab217;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -299,7 +334,7 @@ header {
 }
 
 .especialidad-card {
-    background-color: #ffffff;
+    background-color: #f9f9f9;
     padding: 1.5rem;
     border-radius: 0.75rem;
     text-align: center;
@@ -314,7 +349,7 @@ header {
 
 .especialidad-card i {
     font-size: 2rem;
-    color: #3498db;
+    color: #dab217;
     margin-bottom: 0.5rem;
 }
 
@@ -348,7 +383,7 @@ header {
     justify-content: center;
     gap: 80px;
     align-items: center;
-    margin: 50px 100px;
+    margin: 70px 100px;
 }
 
 .logos-clientes img {
@@ -400,9 +435,29 @@ header {
 
 .seccion-sistemas {
     padding: 80px 20px;
-    background-color: #fffde7;
+    background-color: #ffffff;
     text-align: center;
     /* background-image: url("../img/fondo-gris.png"); */
+}
+
+.Proyectos {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.TituloProyectos {
+    font-size: 46px;
+    margin-bottom: 0px;
+
+}
+
+.intro-sistemas {
+    font-size: 25px;
+    margin: 20px 200px;
+    text-align: center;
+    line-height: 1.6;
 }
 
 .galeria-sistemas {
@@ -461,15 +516,14 @@ header {
 
 .carrusel-slidee img {
     width: 100%;
-    height: 300px;
     object-fit: cover;
     border-radius: 10px;
 }
 
 .carrusel-slidee p {
-    background-color: #f5c518;
+    background-color: rgb(249, 249, 249);
     margin: 0;
-    padding: 8px;
+    padding: 12px;
     font-weight: bold;
     color: #222;
     border-radius: 0 0 10px 10px;
@@ -485,15 +539,14 @@ header {
 
 .carrusel-slide img {
     width: 100%;
-    height: 500px;
     object-fit: cover;
     border-radius: 10px;
 }
 
 .carrusel-slide p {
-    background-color: #f5c518;
+    background-color: rgb(249, 249, 249);
     margin: 0;
-    padding: 8px;
+    padding: 12px;
     font-weight: bold;
     color: #222;
     border-radius: 0 0 10px 10px;
@@ -513,9 +566,12 @@ header {
 }
 
 .seccion-contacto {
-    padding: 2rem;
+    padding: 5rem;
     background-color: #f9f9f9;
     text-align: center;
+
+
+    background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)) center center / cover, url(../img/fondo-gris.svg);
 }
 
 .seccion-contacto h2 {
@@ -556,7 +612,7 @@ header {
 .footer {
     background-color: #222;
     color: #fff;
-    padding: 2rem 1rem 1rem;
+    padding: 3rem;
     text-align: center;
 }
 
