--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -283,6 +283,11 @@ header {
 .especialidades-col {
     flex: 1 1 45%;
     min-width: 300px;
+
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .experiencia-col h2,
@@ -297,8 +302,8 @@ header {
 .experiencia {
     background-color: #f9f9f9;
     border-left: 4px solid #dab217;
-    padding: 2.5rem;
-    margin-bottom: 2.5rem;
+    padding: 2.1rem;
+    margin-bottom: 1.5rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     border-radius: 0.5rem;
     transition: transform 0.2s ease;
@@ -341,12 +346,31 @@ header {
     justify-content: space-between;
     display: flex;
     width: 100%;
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 
 .contenedorTarjetas {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.iconoCard {
+    height: 100px;
+}
+
+.iconoCardOp {
+    height: 115px;
+}
+
+.SeparadorCard {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 5px;
+    width: 2rem;
+    background: #dab217;
+    border-radius: 5px;
 }
 
 .especialidad-card {
@@ -356,8 +380,12 @@ header {
     text-align: center;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
-    height: 332px;
-    width: 265px;
+    height: 320px;
+    width: 250px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .especialidad-card:hover {
@@ -372,14 +400,14 @@ header {
 }
 
 .especialidad-card h4 {
-    font-size: 1.1rem;
+    font-size: 20px;
     margin-bottom: 0.5rem;
-    color: #2c3e50;
+    color: #f9f9f9;
 }
 
 .especialidad-card p {
-    font-size: 0.9rem;
-    color: #555;
+    font-size: 1rem;
+    color: #f9f9f9;
     line-height: 1.4;
 }
 
@@ -781,5 +809,125 @@ header {
         text-align: center;
         font-size: 1.4rem;
         margin: 0px 50px;
+    }
+}
+
+@media (max-width: 425px) {
+    .contenedorInformacionYFoto {
+        flex-direction: column-reverse;
+    }
+
+    .imagenPersonal {
+        margin-top: 0px;
+        height: 300px;
+    }
+
+    .infoNombre {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .parrafoInformacion {
+        font-size: 21px;
+        text-align: justify;
+        color: #ffffff;
+        line-height: 1.6;
+        margin-top: 0px;
+        margin: 1remw;
+    }
+
+    .botonRedes {
+        margin: 0px 10px 0px 10px;
+    }
+
+    .TituloAcercaDe {
+        margin-top: 40px;
+        font-size: 40px;
+    }
+
+    .ParrafoAcercaDe {
+        font-size: 21px;
+        margin: 20px 1rem;
+        line-height: 1.5;
+    }
+
+    .seccion-experiencia-especialidades {
+        padding: 2rem 1rem;
+        gap: 0rem;
+    }
+
+    .experiencia-col h2 {
+        margin-top: 10px;
+    }
+
+    .especialidades-col h2 {
+        margin-top: 10px;
+        margin-bottom: 0rem;
+    }
+
+    .experiencia {
+        padding: 1rem 2.1rem;
+    }
+
+    .contenedorTarjetas {
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+    }
+
+    .especialidad-card {
+        margin-top: 15px;
+        width: 100%;
+
+    }
+
+    .especialidades-grid {
+        gap: 0rem;
+    }
+
+    .TituloProyectos {
+        margin-top: 30px;
+        font-size: 40px;
+    }
+
+    .intro-sistemas {
+        font-size: 21px;
+        margin: 20px 1rem;
+        line-height: 1.5;
+    }
+
+    .seccion-sistemas {
+        padding: 0rem 1rem 1rem 1rem;
+    }
+
+    .carrusel-buttons {
+        display: none;
+    }
+
+    .tituloEmpresas {
+        height: 110px;
+    }
+
+    .clientes {
+        margin: 30px 0px 30px;
+    }
+
+    #YamYam {
+        max-width: 70px;
+    }
+
+    #Serhsi {
+        max-width: 80px;
+    }
+
+    .logos-clientes {
+        gap: 40px;
+        margin: 1rem;
+    }
+    .seccion-contacto h2{
+        margin-top: 0px;
+    }
+    .seccion-contacto {
+        padding: 3rem 1rem;
     }
 }
