cambios en movil y web

--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -100,7 +100,7 @@ header {
 }
 
 .contenedorInformacion {
-    max-width: 900px;
+    max-width: 850px;
 }
 
 .infoNombre {
@@ -118,42 +118,33 @@ header {
     margin-top: 0px;
 }
 
+.spanAmarillo {
+    color: #dab217;
+    font-size: 29px;
+}
+
 .contenedorBotonesRedes {
     display: flex;
     margin-top: 40px;
 }
 
 .botonRedes {
-    height: 45px;
-    width: 45px;
-    font-size: 27px;
-    background-color: #856c20;
-    border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    color: #f9f9f9;
-    border: 0px;
+    color: #856c20;
+    margin: 0 0.5rem;
+    font-size: 1.4rem;
+    transition: color 0.3s ease;
+    text-decoration: none;
+
+
+    font-size: 30px;
     margin: 0px 30px 0px 0px;
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
 }
 
-#instagram:hover {
-    color: #E1306C;
-}
-
-#facebook:hover {
-    color: #3b5998;
-}
-
-#linkedin:hover {
-    color: #0077b5;
-}
-
-#cv:hover {
-    color: #0077b5;
+.botonRedes:hover {
+    color: rgb(218, 178, 23);
 }
 
 .imagenPersonal {
@@ -622,6 +613,8 @@ header {
 
 .seccion-contacto h2 {
     margin-bottom: 1rem;
+    margin-top: 0px;
+    font-size: 46px;
 }
 
 .formulario-contacto {
@@ -630,6 +623,7 @@ header {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-size: 20px;
 }
 
 .formulario-contacto input,
@@ -642,7 +636,7 @@ header {
 
 .formulario-contacto button {
     padding: 0.75rem;
-    background-color: #ffc107;
+    background-color: #dab217;
     color: #000;
     border: none;
     border-radius: 8px;
@@ -658,7 +652,7 @@ header {
 .footer {
     background-color: #222;
     color: #fff;
-    padding: 3rem;
+    padding: 2rem;
     text-align: center;
 }
 
@@ -670,7 +664,7 @@ header {
 }
 
 .footer-nombre h3 {
-    margin: 0;
+    margin: 0px 0px 10px;
     font-size: 1.5rem;
 }
 
@@ -681,7 +675,7 @@ header {
 }
 
 .footer-redes a {
-    color: #ffc107;
+    color: #dab217;
     margin: 0 0.5rem;
     font-size: 1.4rem;
     transition: color 0.3s ease;
@@ -924,12 +918,15 @@ header {
         gap: 40px;
         margin: 1rem;
     }
-    .logos-clientes img{
+
+    .logos-clientes img {
         filter: grayscale(0%);
     }
-    .seccion-contacto h2{
+
+    .seccion-contacto h2 {
         margin-top: 0px;
     }
+
     .seccion-contacto {
         padding: 3rem 1rem;
     }
