--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -830,8 +830,16 @@ header {
         margin: 1remw;
     }
 
+    .spanAmarillo {
+        color: #dab217;
+        font-size: 23px;
+    }
+
     .botonRedes {
-        margin: 0px 10px 0px 10px;
+        margin: 0px 5px 0px 5px;
+        width: 30px;
+        height: 30px;
+        font-size: 30px;
     }
 
     .TituloAcercaDe {
