--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -1,18 +1,38 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0px;
     background-color: #ffffff;
     font-family: "Roboto", sans-serif;
+    padding-top: 70px;
 }
 
 header {
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
     padding-top: 15px;
     align-items: center;
     display: flex;
     background-color: #262626;
     width: 100%;
-    height: 100px;
+    height: 100px; */
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    z-index: 1000;
+    background-color: #262626;
+    transition: height 0.3s ease;
+    align-items: center;
+}
+
+header.scroll-activo .botonRedes i {
+    font-size: 22px;
+    /* o el tamaño que prefieras */
 }
 
 .nombreHeader {
@@ -23,6 +43,31 @@ header {
     font-size: 45px;
 }
 
+#redesHeader {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.ocultar-logo {
+    visibility: hidden;
+    margin-left: 35px;
+}
+
+/* Mostrarlos cuando haces scroll */
+header.scroll-activo #redesHeader {
+    opacity: 1;
+    gap: 0px;
+    margin-top: 0px;
+}
+
+.ocultar {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
 
 
 .contenedorMenu {
@@ -146,16 +191,74 @@ header {
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
+    /* transform: scale(1.2); */
 }
 
 .botonRedes:hover {
     color: rgb(218, 178, 23);
+    /* transform: scale(1.2); */
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#separadorScroll {
+    width: 1px;
+    height: 30px;
+    background-color: #fff;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    margin: 0 10px;
+}
+
+header.scroll-activo #separadorScroll {
+    height: 39px;
+    width: 2px;
+    color: white;
+    background-color: white;
+    opacity: 1;
+    gap: 0px;
 }
 
 .imagenPersonal {
-    display: flex;
     height: 320px;
+    transition: transform 0.3s ease, width 0.3s ease, top 0.3s ease, left 0.3s ease;
+    position: relative;
+    z-index: 1;
     border: 10px solid #856c20;
+
+    /* transition: all 0.4s ease-in-out; */
+    /* width: 200px; */
+    /* border-radius: 50%; */
+    /* display: flex;
+    height: 320px;
+    border: 10px solid #856c20; */
+}
+
+.imagenPersonal.fixed-header {
+    position: fixed;
+    top: 13px;
+    left: 40px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    z-index: 1001;
+    border: 3px solid rgb(133, 108, 32);
+    transform: translateY(0) scale(1);
+}
+
+.imagenEnHeader {
+    position: absolute;
+    top: 13px;
+    left: 40px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    z-index: 1001;
+    border: 3px solid rgb(133, 108, 32);
 }
 
 .lineaAmarilla {
@@ -634,7 +737,7 @@ header {
 .formulario-contacto input,
 .formulario-contacto textarea {
     padding: 0.75rem;
-    border: 1px solid #ccc;
+    border: 1px solid #dab217;
     border-radius: 8px;
     font-size: 1rem;
 }
@@ -652,6 +755,30 @@ header {
 
 .formulario-contacto button:hover {
     background-color: #e0a800;
+}
+
+#botonSubir {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+    background-color: #dab217;
+    /* Amarillo */
+    color: #000;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s ease;
+}
+
+#botonSubir i {
+    font-size: 20px;
 }
 
 .footer {
