--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -4,20 +4,12 @@ html {
 
 body {
     margin: 0px;
-    background-color: #ffffff;
     font-family: "Roboto", sans-serif;
     padding-top: 70px;
+    background-color: #262626;
 }
 
 header {
-    /* display: flex;
-    justify-content: space-between;
-    padding-top: 15px;
-    align-items: center;
-    display: flex;
-    background-color: #262626;
-    width: 100%;
-    height: 100px; */
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -32,7 +24,6 @@ header {
 
 header.scroll-activo .botonRedes i {
     font-size: 22px;
-    /* o el tamaño que prefieras */
 }
 
 .nombreHeader {
@@ -45,7 +36,6 @@ header.scroll-activo .botonRedes i {
 
 #redesHeader {
     opacity: 0;
-    transition: opacity 0.3s ease;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -56,7 +46,6 @@ header.scroll-activo .botonRedes i {
     margin-left: 35px;
 }
 
-/* Mostrarlos cuando haces scroll */
 header.scroll-activo #redesHeader {
     opacity: 1;
     gap: 0px;
@@ -68,7 +57,6 @@ header.scroll-activo #redesHeader {
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
-
 
 .contenedorMenu {
     display: flex;
@@ -184,19 +172,15 @@ header.scroll-activo #redesHeader {
     font-size: 1.4rem;
     transition: color 0.3s ease;
     text-decoration: none;
-
-
     font-size: 30px;
     margin: 0px 30px 0px 0px;
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    /* transform: scale(1.2); */
 }
 
 .botonRedes:hover {
     color: rgb(218, 178, 23);
-    /* transform: scale(1.2); */
 }
 
 .logo {
@@ -210,7 +194,6 @@ header.scroll-activo #redesHeader {
     height: 30px;
     background-color: #fff;
     opacity: 0;
-    transition: opacity 0.3s ease;
     margin: 0 10px;
 }
 
@@ -229,13 +212,6 @@ header.scroll-activo #separadorScroll {
     position: relative;
     z-index: 1;
     border: 10px solid #856c20;
-
-    /* transition: all 0.4s ease-in-out; */
-    /* width: 200px; */
-    /* border-radius: 50%; */
-    /* display: flex;
-    height: 320px;
-    border: 10px solid #856c20; */
 }
 
 .imagenPersonal.fixed-header {
@@ -271,6 +247,7 @@ header.scroll-activo #separadorScroll {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #ffffff;
 }
 
 .TituloAcercaDe {
@@ -287,7 +264,6 @@ header.scroll-activo #separadorScroll {
     background: #dab217;
     border-radius: 5px;
 }
-
 
 .ParrafoAcercaDe {
     font-size: 25px;
@@ -374,15 +350,13 @@ header.scroll-activo #separadorScroll {
     flex-wrap: wrap;
     gap: 2rem;
     padding: 5rem 4rem;
-    /* background-color: #f9f9f9; */
-    /* background-image: url("../img/fondo-gris.png"); */
+    background-color: #ffffff;
 }
 
 .experiencia-col,
 .especialidades-col {
     flex: 1 1 45%;
     min-width: 300px;
-
     justify-content: space-between;
     align-items: center;
     display: flex;
@@ -436,8 +410,6 @@ header.scroll-activo #separadorScroll {
 }
 
 .especialidades-grid {
-    /* display: grid; */
-    /* grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); */
     gap: 1.5rem;
     flex-direction: column;
     justify-content: center;
@@ -517,6 +489,10 @@ header.scroll-activo #separadorScroll {
     align-items: center;
 }
 
+.clientes {
+    background-color: #ffffff;
+}
+
 .clientes h2 {
     font-size: 2rem;
     margin-bottom: 30px;
@@ -582,7 +558,6 @@ header.scroll-activo #separadorScroll {
     padding: 80px 20px;
     background-color: #ffffff;
     text-align: center;
-    /* background-image: url("../img/fondo-gris.png"); */
 }
 
 .Proyectos {
@@ -590,12 +565,12 @@ header.scroll-activo #separadorScroll {
     flex-direction: column;
     text-align: center;
     align-items: center;
+    background-color: #ffffff;
 }
 
 .TituloProyectos {
     font-size: 46px;
     margin-bottom: 0px;
-
 }
 
 .intro-sistemas {
@@ -625,8 +600,6 @@ header.scroll-activo #separadorScroll {
     color: #444;
 }
 
-
-
 .contenedor-carruseles {
     display: flex;
     justify-content: space-around;
@@ -648,7 +621,6 @@ header.scroll-activo #separadorScroll {
 .carrusel-container {
     position: relative;
     overflow: hidden;
-    /* height: 300px; */
 }
 
 .carrusel-slidee {
@@ -714,8 +686,6 @@ header.scroll-activo #separadorScroll {
     padding: 5rem;
     background-color: #f9f9f9;
     text-align: center;
-
-
     background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)) center center / cover, url(../img/fondo-gris.svg);
 }
 
@@ -763,7 +733,6 @@ header.scroll-activo #separadorScroll {
     right: 30px;
     z-index: 1000;
     background-color: #dab217;
-    /* Amarillo */
     color: #000;
     border: none;
     border-radius: 50%;
@@ -824,13 +793,11 @@ header.scroll-activo #separadorScroll {
     color: #888;
 }
 
-
 @media (max-width: 768px) {
     .infoNombre {
         font-size: 28px;
     }
 
-    /* Menú */
     .contenedorMenu {
         display: none;
     }
@@ -842,7 +809,6 @@ header.scroll-activo #separadorScroll {
         text-align: center;
     }
 
-    /* Info + imagen */
     .contenedorInformacionYFoto {
         flex-direction: column;
         align-items: center;
@@ -865,7 +831,6 @@ header.scroll-activo #separadorScroll {
         margin-top: 1rem;
     }
 
-    /* Botones redes */
     .contenedorBotonesRedes {
         flex-wrap: wrap;
         justify-content: center;
@@ -879,7 +844,6 @@ header.scroll-activo #separadorScroll {
         font-size: 1.3rem;
     }
 
-    /* Formación académica */
     .formacion {
         padding: 1rem;
         flex-direction: column;
@@ -899,7 +863,6 @@ header.scroll-activo #separadorScroll {
         width: 120px;
     }
 
-    /* Logos clientes */
     .logos-clientes {
         grid-template-columns: repeat(3, 1fr);
         margin-top: 20px;
@@ -911,7 +874,6 @@ header.scroll-activo #separadorScroll {
         width: 100px;
     }
 
-    /* Carruseles */
     .carrusel-slide img {
         max-width: 100%;
         height: auto;
@@ -923,7 +885,6 @@ header.scroll-activo #separadorScroll {
         padding: 0.4rem 0.8rem;
     }
 
-    /* Títulos más compactos */
     h1,
     h2,
     h3 {
