--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -925,6 +925,7 @@ header.scroll-activo #separadorScroll {
 
     .contenedorInformacionYFoto {
         flex-direction: column-reverse;
+        height: 620px;
     }
 
     .imagenPersonal {
@@ -1015,7 +1016,7 @@ header.scroll-activo #separadorScroll {
     }
 
     .seccion-sistemas {
-        padding: 0rem 1rem 1rem 1rem;
+        padding: 1rem 1rem 1rem 1rem;
     }
 
     .carrusel-buttons {
@@ -1027,7 +1028,8 @@ header.scroll-activo #separadorScroll {
     }
 
     .clientes {
-        margin: 30px 0px 30px;
+        padding: 30px 0px;
+        margin: 0;
     }
 
     #YamYam {
