--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -637,6 +637,7 @@ header.scroll-activo #separadorScroll {
 
 .carrusel-slidee img {
     width: 100%;
+    /* height: 406px; */
     object-fit: cover;
     border-radius: 10px;
 }
@@ -796,6 +797,7 @@ header.scroll-activo #separadorScroll {
     font-size: 0.9rem;
     color: #888;
 }
+
 
 @media (max-width: 768px) {
     .infoNombre {
