--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -210,8 +210,14 @@ header.scroll-activo #separadorScroll {
     margin: 0px 20px;
 }
 
+.contenedorImagenPersonal {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
 .imagenPersonal {
-    height: 320px;
+    height: 280px;
     transition: transform 0.3s ease, width 0.3s ease, top 0.3s ease, left 0.3s ease;
     position: relative;
     z-index: 1;
@@ -413,18 +419,21 @@ header.scroll-activo #separadorScroll {
 .experiencia h4 span {
     font-weight: normal;
 }
-.contenedorLogoExpProf{
+
+.contenedorLogoExpProf {
     margin-top: 7px;
     display: flex;
     align-items: center;
     text-align: center;
 }
-.tiempoExp{
+
+.tiempoExp {
     font-size: 1rem;
     color: #7f8c8d;
     margin-left: 7px;
 }
-.LogoIsssteesinExpProf{
+
+.LogoIsssteesinExpProf {
     width: 120px;
 }
 
@@ -955,7 +964,7 @@ header.scroll-activo #separadorScroll {
 
     .imagenPersonal {
         margin-top: 0px;
-        height: 300px;
+        height: 250px;
     }
 
     .imagenPersonal.fixed-header {
