--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -199,7 +199,8 @@ header.scroll-activo #redesHeader {
 
 .spanAmarillo {
     color: #dab217;
-    font-size: 29px;
+    font-size: 30px;
+    font-style: italic;
 }
 
 .contenedorBotonesRedes {
@@ -765,7 +766,7 @@ header.scroll-activo #separadorScroll {
 }
 
 .seccion-contacto h2 {
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     margin-top: 0px;
     font-size: 46px;
 }
@@ -785,6 +786,7 @@ header.scroll-activo #separadorScroll {
     border: 1px solid #dab217;
     border-radius: 8px;
     font-size: 1rem;
+    font-family: "Roboto", sans-serif;
 }
 
 .formulario-contacto button {
@@ -837,6 +839,17 @@ header.scroll-activo #separadorScroll {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+}
+
+.label {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 0.6rem;
+    font-size: 18px;
+    margin: 5px 0px 0px 0px;
+    color: #4a4a4a;
+    font-family: "Roboto", sans-serif;
 }
 
 .footer-nombre h3 {
