cambios en el color del body

--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -6,7 +6,7 @@ body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
   padding-top: 80px;
-  background-color: #262626;
+  background-color: #010c28;
 }
 
 header {
